name:                twilio-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/krisis/twilio-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Krishnan Parthasarathi
maintainer:          krishnan.parthasarathiATgmailDOTcom
copyright:           2018 Krishnan Parthasarathi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Twilio.Types
                     , Twilio.API
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-conduit
                     , http-types
                     , protolude >= 0.2.2
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite twilio-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , twilio-hs
                     , protolude >= 0.2.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/twilio-hs
